--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
+      // Минимальное отключение Service Worker
       if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
-            .then(registration => console.log('SW registered:', registration))
-            .catch(err => console.log('SW registration failed:', err));
+        navigator.serviceWorker.getRegistrations().then(regs => {
+          regs.forEach(reg => reg.unregister().catch(() => {}));
         });
       }
+
+      // Минимальное подавление только критичных ошибок
+      window.addEventListener('error', (e) => {
+        const msg = (e.error?.message || e.message || '').toLowerCase();
+        if (msg.includes('insecure') && (msg.includes('history') || msg.includes('location'))) {
+          e.preventDefault();
+          return false;
+        }
+      }, true);
     </script>
   </body>
 </html>
